creata classe SparqlEndpointRequest per l'interfaccia delle chiamate REST post e put